@@ -11,10 +11,12 @@ src/applet-dialogs.c
 src/applet.c
 src/applet.glade
 src/applet.h
+src/connection-editor/ce-mobile-wizard.glade
 src/connection-editor/ce-page-ip4.glade
 src/connection-editor/ce-page-wired.glade
 src/connection-editor/ce-page-wireless.glade
 src/connection-editor/ce-page-wireless-security.glade
+src/connection-editor/mobile-wizard.c
 src/connection-editor/page-ip4.c
 src/connection-editor/page-wired.c
 src/connection-editor/page-wired-security.c
